MonetDB5/src/mal/Tests/tst3050.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet5/Linux/var/MonetDB/dbfarm
# dbname:demo
# Visit http://monetdb.cwi.nl for further information.
##Parsing properties and keeping them around
#function dummy(a:int{unsafe,sorted},b:int{sequence}):int{dense};
#	return dummy;
#end dummy;
function Admin.dummy(a:int{sequence},b:int):int;	# 0  (dummy:int)<-(a:int)(b:int)
    return dummy{dense,sorted,unsafe};	# 1  (dummy:int)<-(dummy:int)
end dummy;	# 2  
#
#t:= dummy(a{sorted},b{sequence});
#
!ERROR: t:= dummy(a{sorted},b{sequence});
!                  ^',' expected
function Admin.main():int;	# 0  unknown (main:int)
    t := dummy(a);	# 1  unknown (t:any)<-(a:any)
end main;	# 2  unknown 
>